2003-07-16  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp: remove dead code, fix kernel_only read

2003-07-16  John Levon  <levon@movementarian.org>

	* utils/opcontrol: fix typo that was partly breaking
	CPU_TIMER_INT

2003-07-16  John Levon  <levon@movementarian.org>

	* gui/oprof_start.h:
	* gui/oprof_start.cpp: fixes for CPU_TIMER_INT

2003-07-16  John Levon  <levon@movementarian.org>

	* gui/ui/oprof_start.base.ui: remove add/remove event buttons,
	fix resize weirdness

	* gui/oprof_start.h:
	* gui/oprof_start.cpp: remove add/remove event buttons, allow
	short-form event descriptions

2003-07-15  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/persistent_config.h: remove
	* gui/oprof_start.h:
	* gui/oprof_start.cpp: debug, remove dead code, works better now, see
	  TODO

2003-07-15  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.h:
	* gui/oprof_start.cpp:
	* gui/oprof_start_util.cpp: re-enable partially the gui, sorta of
	  working if cautioulsy used

2003-07-15  John Levon  <levon@movementarian.org>

	* gui/ui/oprof_start_base.ui:
	* gui/oprof_start.h:
	* gui/oprof_start.cpp: some steps towards fixing gui for
	the new events stuff

2003-07-15  John Levon  <levon@movementarian.org>

	* libop/op_events.h:
	* libop/op_events.c: add op_default_event

	* utils/op_help.c: move default event stuff to libop,
	fix -c option

2003-07-15  John Levon  <levon@movementarian.org>

	* utils/op_help.c: fix default RTC event to be
	"RTC_INTERRUPTS"

2003-07-15  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol
	* events/rtc..events: use RTC_INTERRUPTS as event name

2003-07-15  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sample_files.c: C89 compile fix

2003-07-15  John Levon  <levon@movementarian.org>

	* utils/opcontrol:
	* utils/op_help.c: move the default event strings into
	op_help.c instead of in opcontrol

2003-07-15  John Levon  <levon@movementarian.org>
