@@ -7,7 +7,7 @@ for some pointers and/or read HACKING and doc/CodingStyle.
 -----------
 
  o gui: show default event if none selected, fix counter allocation stuff.
-  Test RTC on 2.4
+  We must allow to de-select a counter.
 
  o autoconf 2.13 is broken
 
