@@ -1,3 +1,7 @@
+2003-07-19  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* gui/oprof_start.cpp: RTC mode was not working
+
 2003-07-16  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* gui/oprof_start_config.h:
